Add link to the CIE ID SP Metadata document in the settings page

--- a/src/main/resources/theme-resources/messages/admin-messages_en.properties
+++ b/src/main/resources/theme-resources/messages/admin-messages_en.properties
@@ -8,3 +8,5 @@ identity-provider.cieid.organization-display-names=Organization Display Names
 identity-provider.cieid.organization-display-names.tooltip=Comma separated list of localized organization display names. Each string should be entered in the format "<locale>|<text>", i.e. "en|My Organization,it|Mia Organizzazione"
 identity-provider.cieid.organization-urls=Organization URLs
 identity-provider.cieid.organization-urls.tooltip=Comma separated list of localized organization URLs. Each string should be entered in the format "<locale>|<text>", i.e. "en|https://www.mycompany.local/en/,it|https://www.mycompany.local/it/"
+identity-provider.cieid.protocol-endpoints.saml=CIE ID Service Provider Metadata
+identity-provider.cieid.protocol-endpoints.saml.tooltip=Access the CIE ID Service Provider metadata document that describes this Identity Provider
