Translate CIE ID custom error codes to meaningful messages

--- a/src/main/resources/theme-resources/messages/messages_en.properties
+++ b/src/main/resources/theme-resources/messages/messages_en.properties
@@ -1,3 +1,25 @@
+CieIdFault_ErrorCode_nr2=CIE Identity Provider currently unavailable. Please try again later or use another authentication method (CIE ErrorCode nr2)
+CieIdFault_ErrorCode_nr3=Internal error from the CIE Identity Provider. Please try again later or use another authentication method (CIE ErrorCode nr3)
+CieIdFault_ErrorCode_nr4=Unexpected HTTP Binding method. Please refer to the Service Provider for assistance (CIE ErrorCode nr4)
+CieIdFault_ErrorCode_nr5=Request signature verification failed. Please refer to the Service Provider for assistance (CIE ErrorCode nr5)
+CieIdFault_ErrorCode_nr6=Mismatched HTTP Binding method. Please refer to the Service Provider for assistance (CIE ErrorCode nr6)
+CieIdFault_ErrorCode_nr7=Error verifying request signature. Please refer to the Service Provider for assistance (CIE ErrorCode nr7)
+CieIdFault_ErrorCode_nr8=Request format not compliant with SAML specifications. Please refer to the Service Provider for assistance (CIE ErrorCode nr8)
+CieIdFault_ErrorCode_nr9=Version attribute missing or different from '2.0'. Please refer to the Service Provider for assistance (CIE ErrorCode nr9)
+CieIdFault_ErrorCode_nr10=Issuer missing or not matching the entity that signed the request. Please refer to the Service Provider for assistance (CIE ErrorCode nr10)
+CieIdFault_ErrorCode_nr11=Request ID missing or value not allowed. Please refer to the Service Provider for assistance (CIE ErrorCode nr11)
+CieIdFault_ErrorCode_nr12=RequestAuthnContext missing or does not match the values allowed by eID CIE. Please refer to the Service Provider for assistance (CIE ErrorCode nr12)
+CieIdFault_ErrorCode_nr13=IssueInstant element missing or not matching the time of the received request. Please refer to the Service Provider for assistance (CIE ErrorCode nr13)
+CieIdFault_ErrorCode_nr14=Destination element missing or not matching the receiving Identity Provider. Please refer to the Service Provider for assistance (CIE ErrorCode nr14)
+CieIdFault_ErrorCode_nr15=isPassive attribute has value true. Please refer to the Service Provider for assistance (CIE ErrorCode nr15)
+CieIdFault_ErrorCode_nr16=Error in the AssertionConsumerService value. Please refer to the Service Provider for assistance (CIE ErrorCode nr16)
+CieIdFault_ErrorCode_nr17=Attribute Format of the NameIDPolicy element is missing or has an unexpected value. Please refer to the Service Provider for assistance (CIE ErrorCode nr17)
+CieIdFault_ErrorCode_nr18=AttributeConsumerServiceIndex does not match any value declared in the SP metadata. Please refer to the Service Provider for assistance (CIE ErrorCode nr18)
+CieIdFault_ErrorCode_nr21=Timeout during user authentication (CIE ErrorCode nr21)
+CieIdFault_ErrorCode_nr22=User declined consent to send data during current session (CIE ErrorCode nr22)
+CieIdFault_ErrorCode_nr23=Identity suspended, revoked or credentials locked (CIE ErrorCode nr23)
+CieIdFault_ErrorCode_nr25=Authentication canceled by user (CIE ErrorCode nr25)
+
 CieIdSamlCheck_nr16=InResponseTo attribute is empty
 CieIdSamlCheck_nr17=InResponseTo attribute is missing
 CieIdSamlCheck_nr18=InResponseTo attribute does not match expected request ID
