Fix: Properly escape properties file

--- a/src/main/resources/theme-resources/messages/messages_it.properties
+++ b/src/main/resources/theme-resources/messages/messages_it.properties
@@ -5,20 +5,20 @@ CieIdFault_ErrorCode_nr5=Verifica della firma fallita. Contattare il gestore del
 CieIdFault_ErrorCode_nr6=Binding su metodo HTTP errato. Contattare il gestore del servizio (CIE ErrorCode nr6)
 CieIdFault_ErrorCode_nr7=Errore sulla verifica della firma della richiesta. Contattare il gestore del servizio (CIE ErrorCode nr7)
 CieIdFault_ErrorCode_nr8=Formato della richiesta non conforme alle specifiche SAML. Contattare il gestore del servizio (CIE ErrorCode nr8)
-CieIdFault_ErrorCode_nr9=Parametro version non presente, malformato o diverso da '2.0'. Contattare il gestore del servizio (CIE ErrorCode nr9)
-CieIdFault_ErrorCode_nr10=Issuer non presente, malformato o non corrispondente all'entità che sottoscrive la richiesta. Contattare il gestore del servizio (CIE ErrorCode nr10)
+CieIdFault_ErrorCode_nr9=Parametro version non presente, malformato o diverso da ''2.0''. Contattare il gestore del servizio (CIE ErrorCode nr9)
+CieIdFault_ErrorCode_nr10=Issuer non presente, malformato o non corrispondente all''entità che sottoscrive la richiesta. Contattare il gestore del servizio (CIE ErrorCode nr10)
 CieIdFault_ErrorCode_nr11=ID (Identificatore richiesta) non presente, malformato o non conforme. Contattare il gestore del servizio (CIE ErrorCode nr11)
 CieIdFault_ErrorCode_nr12=RequestAuthnContext non presente, malformato o non previsto da eID CIE. Contattare il gestore del servizio (CIE ErrorCode nr12)
-CieIdFault_ErrorCode_nr13=IssueInstant non presente, malformato o non coerente con l'orario di arrivo della richiesta. Contattare il gestore del servizio (CIE ErrorCode nr13)
+CieIdFault_ErrorCode_nr13=IssueInstant non presente, malformato o non coerente con l''orario di arrivo della richiesta. Contattare il gestore del servizio (CIE ErrorCode nr13)
 CieIdFault_ErrorCode_nr14=Destination non presente, malformata o non coincidente con il Gestore delle identità ricevente la richiesta. Contattare il gestore del servizio (CIE ErrorCode nr14)
 CieIdFault_ErrorCode_nr15=Attributo isPassive presente e attualizzato al valore true. Contattare il gestore del servizio (CIE ErrorCode nr15)
 CieIdFault_ErrorCode_nr16=AssertionConsumerService non correttamente valorizzato. Contattare il gestore del servizio (CIE ErrorCode nr16)
-CieIdFault_ErrorCode_nr17=Attributo Format dell'elemento NameIDPolicy assente o non valorizzato secondo specifica. Contattare il gestore del servizio (CIE ErrorCode nr17)
+CieIdFault_ErrorCode_nr17=Attributo Format dell''elemento NameIDPolicy assente o non valorizzato secondo specifica. Contattare il gestore del servizio (CIE ErrorCode nr17)
 CieIdFault_ErrorCode_nr18=AttributeConsumerServiceIndex malformato o che riferisce a un valore non registrato nei metadati di SP. Contattare il gestore del servizio (CIE ErrorCode nr18)
-CieIdFault_ErrorCode_nr21=Timeout durante l'autenticazione utente (CIE ErrorCode nr21)
-CieIdFault_ErrorCode_nr22=Utente nega il consenso all'invio di dati al SP in caso di sessione vigente (CIE ErrorCode nr22)
+CieIdFault_ErrorCode_nr21=Timeout durante l''autenticazione utente (CIE ErrorCode nr21)
+CieIdFault_ErrorCode_nr22=Utente nega il consenso all''invio di dati al SP in caso di sessione vigente (CIE ErrorCode nr22)
 CieIdFault_ErrorCode_nr23=Utente con identità sospesa/revocata o con credenziali bloccate (CIE ErrorCode nr23)
-CieIdFault_ErrorCode_nr25=Processo di autenticazione annullato dall'utente (CIE ErrorCode nr25)
+CieIdFault_ErrorCode_nr25=Processo di autenticazione annullato dall''utente (CIE ErrorCode nr25)
 
 CieIdSamlCheck_16=Attributo InResponseTo non specificato
 CieIdSamlCheck_17=Attributo InResponseTo mancante
