--- a/src/main/resources/theme-resources/messages/messages_en.properties
+++ b/src/main/resources/theme-resources/messages/messages_en.properties
@@ -5,7 +5,7 @@ CieIdFault_ErrorCode_nr5=Request signature verification failed. Please refer to 
 CieIdFault_ErrorCode_nr6=Mismatched HTTP Binding method. Please refer to the Service Provider for assistance (CIE ErrorCode nr6)
 CieIdFault_ErrorCode_nr7=Error verifying request signature. Please refer to the Service Provider for assistance (CIE ErrorCode nr7)
 CieIdFault_ErrorCode_nr8=Request format not compliant with SAML specifications. Please refer to the Service Provider for assistance (CIE ErrorCode nr8)
-CieIdFault_ErrorCode_nr9=Version attribute missing or different from '2.0'. Please refer to the Service Provider for assistance (CIE ErrorCode nr9)
+CieIdFault_ErrorCode_nr9=Version attribute missing or different from ''2.0''. Please refer to the Service Provider for assistance (CIE ErrorCode nr9)
 CieIdFault_ErrorCode_nr10=Issuer missing or not matching the entity that signed the request. Please refer to the Service Provider for assistance (CIE ErrorCode nr10)
 CieIdFault_ErrorCode_nr11=Request ID missing or value not allowed. Please refer to the Service Provider for assistance (CIE ErrorCode nr11)
 CieIdFault_ErrorCode_nr12=RequestAuthnContext missing or does not match the values allowed by eID CIE. Please refer to the Service Provider for assistance (CIE ErrorCode nr12)
