New feature: Added the ability to specify the id of the certificate key to be used for signing metadata and AthRequest when configuring the plugin and remove deprecated methods

--- a/src/main/resources/theme-resources/messages/admin-messages_en.properties
+++ b/src/main/resources/theme-resources/messages/admin-messages_en.properties
@@ -52,3 +52,6 @@ identity-provider.cieid.ipaCode=IPA Code
 identity-provider.cieid.ipaCode.tooltip=IPA Code of the Public Administration
 identity-provider.cieid.ipaCategory=IPA Category
 identity-provider.cieid.ipaCategory.tooltip=IPA Category of the Public Administration
+identity-provider.cieid.realm-keys-provider-id=Realm Keys Provider ID
+identity-provider.cieid.realm-keys-provider-id.tooltip=Enter the reference to Realm Keys Provider ID, for signing Metadata and AuthRequest
+
