fix for idpEntityId not imported from metadata

--- a/src/main/resources/theme-resources/messages/messages_it.properties
+++ b/src/main/resources/theme-resources/messages/messages_it.properties
@@ -173,6 +173,10 @@ identity-provider.cieid.ipaCategory=IPA Category
 identity-provider.cieid.ipaCategory.tooltip=IPA Category of the Public Administration
 identity-provider.saml.url.metadata=Metadata URL
 identity-provider.saml.url.metadata.tooltip=URL of the generated SAML metadata
+identity-provider.saml.idp-entity-id=Identity Provider Entity ID
+identity-provider.saml.idp-entity-id.tooltip=The Entity ID used to validate the Issuer for received SAML assertions. If empty, no Issuer validation is performed.
+identity-provider.spid.protocol-endpoints.saml=SPID Service Provider Metadata
+identity-provider.spid.protocol-endpoints.saml.tooltip=Access the SPID Service Provider metadata document aggregating the information for all SPID Service Providers registered in this realm
 
 # Debug
 identity-provider.spid.debug-enabled=Show detailed SPID response errors
